--- a/stationrunner/templates/stationrunner/station_list.html
+++ b/stationrunner/templates/stationrunner/station_list.html
@@ -1,7 +1,7 @@
 <h1>Stations</h1>
 <ul>
 {% for station in object_list %}
-    <li>{{ article.id }} {{ article.name }} {{ article.address }}</li>
+    <li>{{ station.id }} {{ station.name }} {{ station.address }}</li>
 {% empty %}
     <li>No stations yet.</li>
 {% endfor %}
