--- a/templates/auth/login.html
+++ b/templates/auth/login.html
@@ -23,12 +23,8 @@
         <label for="id_password">Password:</label>
         {{ form.password }}
       </p>
-      {% if next %}
-        <input type="hidden" name="next" value="{{ next }}" />
-      {% else %}
-        <input type="hidden" name="next" value="/portal/" />
-      {% endif %}
       <input type="submit" value="login" />
+      <input type="hidden" name="next" value="{% url 'userredirect' %}" />
     </form>
   </section>
 {% endblock %}
