Simplifies redirection to user home page after successful login

--- a/templates/auth/login.html
+++ b/templates/auth/login.html
@@ -24,7 +24,7 @@
         {{ form.password }}
       </p>
       <input type="submit" value="login" />
-      <input type="hidden" name="next" value="{% url 'userredirect' %}" />
+      <input type="hidden" name="next" value="{% url 'userhome' %}" />
     </form>
   </section>
 {% endblock %}
