Adds desired links under apt descriptions into homepage

--- a/templates/home.html
+++ b/templates/home.html
@@ -10,5 +10,8 @@
 
   <section>
       <p>Welcome to open radio. We help you get on air!</p>
+      <p><a href="{% url 'userlogin' %}">Login</a></p>
+      <p><a href="{% url 'liststations' %}">View all our stations</a></p>
+      <p><a href="{% url 'userregistration' %}">SignUp!</a></p>      
   </section>
 {% endblock %}
