--- a/templates/auth/login.html
+++ b/templates/auth/login.html
@@ -24,8 +24,9 @@
         {{ form.password }}
       </p>
       <input type="submit" value="login" />
-      <input type="hidden" name="next" value="{% url 'userhome' %}" />
+      <input type="hidden" name="next" value="{% url 'userredirect' %}" />
     </form>
+
     <p><a href="{% url 'userregistration' %}">SignUp!</a></p>      
     <p><a href="{% url 'liststations' %}">View all our stations</a></p>
   </section>
