--- a/templates/list_stations.html
+++ b/templates/list_stations.html
@@ -16,6 +16,10 @@
       <li >{{ station }}</li> 
     {% empty %}
       <li>You have not created any stations yet!</li>
+      <form method="post" action="{% url 'list_create_station' %}">
+	{% csrf_token %}
+	<input type="submit" value="Create one"/>
+      </form>
     {% endfor %}
   </ul>
 </body>
