--- a/templates/home_station.html
+++ b/templates/home_station.html
@@ -56,6 +56,8 @@
     {% csrf_token %}
     <input type="submit" value="Delete Station" />
   </form>
+
+  <a href="{% url 'userhome' user.pk %}">Home</a>
 </body>
 
 </html>
