--- a/templates/home_station.html
+++ b/templates/home_station.html
@@ -18,7 +18,7 @@
     {% endfor %}
   </ul>
 
-  <form name="create_channel" method="post" action="{% url 'list_create_channel' %}">
+  <form name="create_channel" method="post" action="{% url 'channels' %}">
     {% csrf_token %}
     <input type="submit" value="Create a new channel" />
   </form>
