--- a/templates/home_user.html
+++ b/templates/home_user.html
@@ -5,17 +5,8 @@
 
 <body>
   <h1> Hey {{ user }}! </h1>
-  <p><a href="{% url 'list_create_station' %}">View your stations</a></p>
-  <form name="create_station" id="create_station" method="post" action="{% url 'list_create_station' %}">
-    {% csrf_token %}
-    <input type="submit" value="Create a new Station" />
-  </form>
-
-  <p><a href="{% url 'list_upload_audio_file' %}">View audio files you uploaded</a></p>
-  <form name="upload_audio" id="upload_audio" method="post" action="{% url 'list_upload_audio_file' %}">
-    {% csrf_token %}
-    <input type="submit" value="Upload a new audio file" />
-  </form>
+  <p><a href="{% url 'list_create_station' %}">View Stations</a></p>
+  <p><a href="{% url 'list_upload_audio_file' %}">Uploaded audio files</a></p>
 
 </body>
 </html>
