--- a/templates/list_upload_audio_files.html
+++ b/templates/list_upload_audio_files.html
@@ -15,7 +15,7 @@
   </ul>
   
   <h2>Upload a new audio</h2>
-  <form method="post" action="" enctype="multipart/form-data">
+  <form method="post" action="." enctype="multipart/form-data">
     {% csrf_token %}
     {{ form }}
     <input type="submit" value="Upload"/>
