Corrects action parameter to forms

--- a/templates/list_create_stations.html
+++ b/templates/list_create_stations.html
@@ -20,7 +20,7 @@
   </ul>
 
   <h2>Create a new station</h2>
-  <form action="." method="post">
+  <form action="" method="post">
     {% csrf_token %}
     {{ form }}
     <input type="submit" value="Create" />
