--- a/templates/home_user.html
+++ b/templates/home_user.html
@@ -5,8 +5,8 @@
 
 <body>
   <h1> Hey {{ user }}! </h1>
-  <p><a href="{% url 'list_create_station' %}">View Stations</a></p>
-  <p><a href="{% url 'list_upload_audio_file' %}">Uploaded audio files</a></p>
+  <p><a href="{% url 'stations' %}">View Stations</a></p>
+  <p><a href="{% url 'audio_files' %}">Uploaded audio files</a></p>
 
 </body>
 </html>
