--- a/templates/home_station.html
+++ b/templates/home_station.html
@@ -23,7 +23,10 @@
         $.ajax({
             type: 'POST',
             url: '{% url 'home_station' station.id %}',
-            headers: {'X-Methodoverride': 'DELETE'}
+            headers: {'X-Methodoverride': 'DELETE'},
+            success: function(response) {
+              window.location.href = "{% url 'stations' %}"
+            }
         });
       });
     });
