--- a/templates/auth/login.html
+++ b/templates/auth/login.html
@@ -1,32 +1,35 @@
-{% block head %}
+<!DOCTYPE html>
+<head>
   <title>Open Radio</title>
-{% endblock %}
 
-{% block body %}
-  <header>
-    <h1>Open Radio</h1>
-    <h2>We get you on air!</h2>
-  </header>
+  <style>
+    body {
+    background-color: #87ceeb;
+    }
+  </style>
+</head>
 
-  <section>
-    {% if form.errors %}
-      <p>Your username and password didn't match, please try again.</p>
-    {% endif %}
+<body>
+  <h1>Open Radio</h1>
+  <h2>We get you on air!</h2>
+  
+  {% if form.errors %}
+  <p>Your username and password didn't match, please try again.</p>
+  {% endif %}
 
-    <form method="post" action=".">
-      {% csrf_token %}
-      <p>
-        <label for="id_username">Username:</label>
-        {{ form.username }}
-      </p>
-      <p>
-        <label for="id_password">Password:</label>
-        {{ form.password }}
-      </p>
-      <input type="submit" value="login" />
-      <input type="hidden" name="next" value="{% url 'userredirect' %}" />
-    </form>
+  <form method="post" action=".">
+    {% csrf_token %}
+    <p>
+      <label for="id_username">Username:</label>
+      {{ form.username }}
+    </p>
+    <p>
+      <label for="id_password">Password:</label>
+      {{ form.password }}
+    </p>
+    <input type="submit" value="login" />
+    <input type="hidden" name="next" value="{% url 'userredirect' %}" />
+  </form>
 
-    <p><a href="{% url 'userregistration' %}">SignUp!</a></p>     
-  </section>
-{% endblock %}
+  <p><a href="{% url 'userregistration' %}">SignUp!</a></p>     
+</body>
