Adds expected/required html tags

--- a/stationrunner/templates/stationrunner/channel_detail.html
+++ b/stationrunner/templates/stationrunner/channel_detail.html
@@ -1,2 +1,11 @@
-<p> Channel Name: {{ object.c_name }}
-<p> Frequency: {{ object.c_frequency }}
+<!DOCTYPE html>
+<html>
+<head>
+  <title>Channel Details</title>
+</head>
+
+<body>
+  <p> Channel Name: {{ object.c_name }}
+  <p> Frequency: {{ object.c_frequency }}
+</body>
+</html>
