--- a/stationrunner/templates/stationrunner/channel_edit_form.html
+++ b/stationrunner/templates/stationrunner/channel_edit_form.html
@@ -1,5 +1,14 @@
-<form action="" method="post">{% csrf_token %}
+<!DOCTYPE html>
+<html>
+<head>
+  <title>Edit Channel</title>
+</head>
+
+<body>
+  <form action="" method="post">{% csrf_token %}
     {{ form.as_p }}
     <input type="submit" value="Update" />
-</form>
+  </form>
+</body>
+</html>
 
