--- a/stationrunner/templates/stationrunner/channel_list.html
+++ b/stationrunner/templates/stationrunner/channel_list.html
@@ -1,8 +1,17 @@
-<h1>Channels</h1>
-<ul>
-{% for channel in object_list %}
+<!DOCTYPE html>
+<html>
+<head>
+  <title>List Channels</title>
+</head>
+
+<body>
+  <h1>Channels</h1>
+  <ul>
+    {% for channel in object_list %}
     <li>{{ channel.id }} {{ channel.c_name }} {{ channel.c_frequency }}</li>
-{% empty %}
+    {% empty %}
     <li>No Channels yet.</li>
-{% endfor %}
-</ul>
+    {% endfor %}
+  </ul>
+</body>
+</html>
