--- a/templates/auth/register.html
+++ b/templates/auth/register.html
@@ -1,5 +1,14 @@
-<form method="POST" action="">
-  {% csrf_token %}
-  {{ form.as_p }}
-  <input type="submit" value="Register"/>
-</form>
+<!DOCTYPE html>
+<html>
+<head>
+  <title>User Registration</title>
+</head>
+
+<body>
+  <form method="POST" action="">
+    {% csrf_token %}
+    {{ form.as_p }}
+    <input type="submit" value="Register"/>
+  </form>
+</body>
+</html>
