--- a/templates/home_station.html
+++ b/templates/home_station.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <head>
+  <title>Station Home</title>
   {% load staticfiles %}
   <script src="{% static "stationrunner/jquery-1.11.3.js" %}"></script>
   <script src="{% static "stationrunner/jquery.cookie.js" %}"></script>
@@ -73,5 +74,4 @@
 
   <a href="{% url 'userhome' user.pk %}"><h1>Home</h1></a>
 </body>
-
 </html>
