--- a/templates/home_user.html
+++ b/templates/home_user.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <title>User Home</title>
 </head>
 
 <body>
   <h1> Hey {{ user }}! </h1>
   <p><a href="{% url 'stations' %}">View Stations</a></p>
   <p><a href="{% url 'audio_files' %}">Uploaded audio files</a></p>
-
 </body>
 </html>
