--- a/templates/list_channels.html
+++ b/templates/list_channels.html
@@ -1,6 +1,8 @@
+<!DOCTYPE html>
 <html>
-
 <head>
+  <title>List Channels</title>
+
   <style>
     li {
     font-size: 20px;
@@ -19,5 +21,4 @@
     {% endfor %}
   </ul>
 </body>
-
 </html>
