--- a/stationrunner/templates/stationrunner/channel_form.html
+++ b/stationrunner/templates/stationrunner/channel_form.html
@@ -1,4 +1,13 @@
-<form method="post">{% csrf_token %}
-{{ form.as_p }}
-<input type="submit" value="Create" />
-</form>
+<!DOCTYPE html>
+<html>
+<head>
+  <title>Create Channel</title>
+</head>
+
+<body>
+  <form method="post">{% csrf_token %}
+    {{ form.as_p }}
+    <input type="submit" value="Create" />
+  </form>
+</body>
+</html>
