--- a/templates/stations.html
+++ b/templates/stations.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
-
 <head>
+  <title>Stations</title>
+
   <style>
     li {
     font-size: 20px;
@@ -31,5 +32,4 @@
 
   <a href="{% url 'userhome' user.pk %}">Home</a>
 </body>
-
 </html>
