Adds some common style

--- a/templates/audio_files.html
+++ b/templates/audio_files.html
@@ -2,6 +2,8 @@
 <html>
 <head>
   <title>Audio Files</title>
+  {% load staticfiles %}
+  <link rel="stylesheet" type="text/css" href="{% static 'or_style.css' %}">
 </head>
 
 <body>
