--- a/templates/auth/login.html
+++ b/templates/auth/login.html
@@ -1,12 +1,8 @@
 <!DOCTYPE html>
 <head>
   <title>Open Radio</title>
-
-  <style>
-    body {
-    background-color: #87ceeb;
-    }
-  </style>
+  {% load staticfiles %}
+  <link rel="stylesheet" type="text/css" href="{% static 'or_style.css' %}">
 </head>
 
 <body>
