--- a/templates/stations.html
+++ b/templates/stations.html
@@ -2,12 +2,8 @@
 <html>
 <head>
   <title>Stations</title>
-
-  <style>
-    li {
-    font-size: 20px;
-    }
-  </style>
+  {% load staticfiles %}
+  <link rel="stylesheet" type="text/css" href="{% static 'or_style.css' %}">
 </head>
 
 <body>
