--- a/stationrunner/templates/stationrunner/channel_list.html
+++ b/stationrunner/templates/stationrunner/channel_list.html
@@ -2,6 +2,8 @@
 <html>
 <head>
   <title>List Channels</title>
+  {% load staticfiles %}
+  <link rel="stylesheet" type="text/css" href="{% static 'or_style.css' %}">
 </head>
 
 <body>
