--- a/templates/create_channel.html
+++ b/templates/create_channel.html
@@ -2,6 +2,8 @@
 <html>
 <head>
   <title>Channel Creation</title>
+  {% load staticfiles %}
+  <link rel="stylesheet" type="text/css" href="{% static 'or_style.css' %}">
 </head>
 
 <body>
